force-app/main/default/objects/Account/fields/Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Account Record Type Name</label>
    <type>Text</type>
</CustomField>