force-app/main/default/objects/Account/fields/Account_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Account_Unique_ID_Legacy__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Account Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>