force-app/main/default/objects/Account/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <label>Agency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>