force-app/main/default/objects/Account/fields/Agreement_returned__c.field-meta.xml
<CustomField>
    <fullName>Agreement_returned__c</fullName>
    <label>Agreement returned</label>
    <type>Date</type>
</CustomField>