force-app/main/default/objects/Account/fields/Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent__c</fullName>
    <label>Agreement Sent</label>
    <type>Date</type>
</CustomField>