force-app/main/default/objects/Account/fields/Blocked_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked Renewal</label>
    <type>Checkbox</type>
</CustomField>