force-app/main/default/objects/Account/fields/Cancellation_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notification_Email__c</fullName>
    <label>Cancellation Notification Email</label>
    <type>Email</type>
</CustomField>