force-app/main/default/objects/Account/fields/Claim_made__c.field-meta.xml
<CustomField>
    <fullName>Claim_made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim made</label>
    <type>Checkbox</type>
</CustomField>