force-app/main/default/objects/Account/fields/Commission_Voucher_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Voucher_Amount__c</fullName>
    <description>A fixed £ value for any vouchers the partner is entitled on new business commission</description>
    <label>Commission Voucher Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>