force-app/main/default/objects/Account/fields/Compliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Partner</label>
    <type>Checkbox</type>
</CustomField>