force-app/main/default/objects/Account/fields/Contractor_insurance_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Contractor_insurance_decision_maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Insurance Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>