force-app/main/default/objects/Account/fields/Data_Sharting_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharting_Status__c</fullName>
    <label>Data Sharting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>