force-app/main/default/objects/Account/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
                <isActive>false</isActive>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>