force-app/main/default/objects/Account/fields/End_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Contact__c</fullName>
    <label>End Client Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>