force-app/main/default/objects/Account/fields/ERN__c.field-meta.xml
<CustomField>
    <fullName>ERN__c</fullName>
    <label>ERN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>