force-app/main/default/objects/Account/fields/ERN_Exempt__c.field-meta.xml
<CustomField>
    <fullName>ERN_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERN Exempt</label>
    <type>Checkbox</type>
</CustomField>