force-app/main/default/objects/Account/fields/External_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Name__c</fullName>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>