force-app/main/default/objects/Account/fields/Fixed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Discount__c</fullName>
    <label>Fixed Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>