force-app/main/default/objects/Account/fields/Found_Via__c.field-meta.xml
<CustomField>
    <fullName>Found_Via__c</fullName>
    <label>Found Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>