force-app/main/default/objects/Account/fields/Found_Via_Info__c.field-meta.xml
<CustomField>
    <fullName>Found_Via_Info__c</fullName>
    <label>Found Via Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>