force-app/main/default/objects/Account/fields/gaconnector_Google_Analytics_Link__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Google_Analytics_Link__c</fullName>
    <formula>HYPERLINK( (&quot;https://gaconnector.com/docs/how-to-set-up-google-analytics-link-field-in-salesforce/&quot;), &quot;Open in Google Analytics&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Analytics Link</label>
    <type>Text</type>
</CustomField>