force-app/main/default/objects/Account/fields/General_Details__c.field-meta.xml
<CustomField>
    <fullName>General_Details__c</fullName>
    <label>General Details</label>
    <type>TextArea</type>
</CustomField>