force-app/main/default/objects/Account/fields/Group_Insurance_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Group_Insurance_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Insurance Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Group Insurance Decision Maker)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>