force-app/main/default/objects/Account/fields/Hosted_guidance_sheet__c.field-meta.xml
<CustomField>
    <fullName>Hosted_guidance_sheet__c</fullName>
    <label>Hosted guidance sheet</label>
    <type>Url</type>
</CustomField>