force-app/main/default/objects/Account/fields/How_many_Ltd_company_contractors__c.field-meta.xml
<CustomField>
    <fullName>How_many_Ltd_company_contractors__c</fullName>
    <label>How many Ltd company contractors?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>