force-app/main/default/objects/Account/fields/How_many_monthly_starters__c.field-meta.xml
<CustomField>
    <fullName>How_many_monthly_starters__c</fullName>
    <label>How many monthly starters?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>