force-app/main/default/objects/Account/fields/IAR_Valid__c.field-meta.xml
<CustomField>
    <fullName>IAR_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this partner have a valid IAR agreement in place? Used for email and API lead quarantine rules.</description>
    <label>Data Sharing Permission</label>
    <type>Checkbox</type>
</CustomField>