force-app/main/default/objects/Account/fields/Individual_Referred_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Individual_Referred_by_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Referred by Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Individual Referred by Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>