force-app/main/default/objects/Account/fields/Insurance_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Mandate__c</fullName>
    <label>Insurance Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not enforce and do not recommend</fullName>
            </value>
            <value>
                <fullName>Recommend but do not enforce</fullName>
            </value>
            <value>
                <fullName>Enforce for certain clients</fullName>
            </value>
            <value>
                <fullName>Blocker to payment</fullName>
            </value>
            <value>
                <fullName>Blocker to placement</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
                <isActive>false</isActive>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>