force-app/main/default/objects/Account/fields/Insurance_Process_Manager_PI_IR35_Insura__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Process_Manager_PI_IR35_Insura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who manages the insurance process?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Who manages the insurance process?)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>