force-app/main/default/objects/Account/fields/Insure_with_KIB__c.field-meta.xml
<CustomField>
    <fullName>Insure_with_KIB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insure with KIB</label>
    <type>Checkbox</type>
</CustomField>