force-app/main/default/objects/Account/fields/IR35_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>IR35_Decision_Maker__c</fullName>
    <label>IR35 Decision Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>