force-app/main/default/objects/Account/fields/IR35_ParagraphIR35_Secure__c.field-meta.xml
<CustomField>
    <fullName>IR35_ParagraphIR35_Secure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR35 Paragraph/IR35 Secure</label>
    <type>Checkbox</type>
</CustomField>