force-app/main/default/objects/Account/fields/IR35_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>IR35_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Email address of the IR35 Project Manager</description>
    <label>IR35 Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IR35 Project Manager)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>