force-app/main/default/objects/Account/fields/IR35_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>IR35_Project_Manager_Email__c</fullName>
    <label>IR35 Project Manager Email</label>
    <type>Email</type>
</CustomField>