force-app/main/default/objects/Account/fields/IR35_Protect_Blocker__c.field-meta.xml
<CustomField>
    <fullName>IR35_Protect_Blocker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR35 Protect Blocker</label>
    <type>Checkbox</type>
</CustomField>