force-app/main/default/objects/Account/fields/IR35_Tool_Sign_Up__c.field-meta.xml
<CustomField>
    <fullName>IR35_Tool_Sign_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR35 Tool Sign Up</label>
    <type>Checkbox</type>
</CustomField>