force-app/main/default/objects/Account/fields/Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Points__c</fullName>
    <label>Key Points</label>
    <type>TextArea</type>
</CustomField>