force-app/main/default/objects/Account/fields/Last_Policy_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Policy_Purchase_Date__c</fullName>
    <description>Field is to indicate the last date a Policy has been purchased and is updated by Policy: Create flow</description>
    <label>Last Policy Purchase Date</label>
    <type>Date</type>
</CustomField>