force-app/main/default/objects/Account/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <label>Lead Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>