force-app/main/default/objects/Account/fields/Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Partner__c</fullName>
    <label>Lead Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>