force-app/main/default/objects/Account/fields/Minimum_Cover_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cover_Requirements__c</fullName>
    <label>Minimum Cover Requirements</label>
    <type>TextArea</type>
</CustomField>