force-app/main/default/objects/Account/fields/Number_of_Live_PSCs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Live_PSCs__c</fullName>
    <label>Number of Live PSCs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>