force-app/main/default/objects/Account/fields/Opt_Out_of_Marketing_SMS__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Marketing_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether user has opted out of being contacted by SMS for marketing purposes. Defaults to unchecked, to be used to unsubscribe users from marketing texts.</description>
    <label>Opt Out of Marketing SMS</label>
    <type>Checkbox</type>
</CustomField>