force-app/main/default/objects/Account/fields/Partner_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Partner_Penetration__c</fullName>
    <formula>IF(OR(ISPICKVAL(Insurance_Mandate__c,&apos;Blocker to Payment&apos;),ISPICKVAL(Insurance_Mandate__c,&apos;Blocker to Placement&apos;)),15/100,0)+
IF(Perfect_Paragraph_Implemented__c,15/100,0)+
IF(Renewal_paragraph_implemented__c,10/100,0)+
IF( IR35_ParagraphIR35_Secure__c ,10/100,0)+
IF(IR35_Protect_Blocker__c,15/100,0)+
IF(Referring__c,5/100,0)+
IF(IR35_Tool_Sign_Up__c,20/100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Penetration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>