force-app/main/default/objects/Account/fields/Partner_Penetration_Score__c.field-meta.xml
<CustomField>
    <fullName>Partner_Penetration_Score__c</fullName>
    <formula>/* First image is to manage the auto misalignment applied by Salesforce*/
IMAGE(&quot;/resource/1713881378000/Gray?&quot;, &quot;Grey&quot;, 18, 0) &amp;
IMAGE(&quot;/resource/1713881378000/Gray?&quot;, &quot;Grey&quot;, 18, 2) &amp;
IMAGE(&quot;/resource/1713881351000/Green?&quot;, &quot;Green&quot;, 18, Partner_Penetration__c * 100) &amp;
IMAGE(&quot;/resource/1713881378000/Gray?&quot;, &quot;Grey&quot;, 18, ((1 - Partner_Penetration__c) * 100) + 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Penetration Score</label>
    <type>Text</type>
</CustomField>