force-app/main/default/objects/Account/fields/Partner_Score__c.field-meta.xml
<CustomField>
    <fullName>Partner_Score__c</fullName>
    <formula>IF( IR35_Tool_Sign_Up__c, 0.25, 0)
+
IF( TEXT(Insurance_Mandate__c) = &quot;Blocker to placement&quot; || TEXT(Insurance_Mandate__c) = &quot;Blocker to payment&quot;,0.20,0)
+
IF( Perfect_Paragraph_Implemented__c ,0.20,0)
+
IF( Renewal_paragraph_implemented__c  ,0.10,0)
+
IF( IR35_Protect_Blocker__c || Recruiter_Protect__c ,0.15,0)
+
IF(  Referring__c ,0.10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>