force-app/main/default/objects/Account/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <label>Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Referral</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Job Site</fullName>
            </value>
            <value>
                <fullName>Phone Inbound</fullName>
            </value>
            <value>
                <fullName>Email Inbound</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
                <isActive>false</isActive>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>