force-app/main/default/objects/Account/fields/Partner_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_URL__c</fullName>
    <label>Partner URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>