force-app/main/default/objects/Account/fields/Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount__c</fullName>
    <label>Percentage Discount</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>