force-app/main/default/objects/Account/fields/Perfect_Paragraph_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Perfect_Paragraph_Implemented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For partner to advise whether Perfect Paragraph has been implemented.</description>
    <label>Perfect Paragraph Implemented</label>
    <type>Checkbox</type>
</CustomField>