force-app/main/default/objects/Account/fields/Perfect_Paragraph_Wording__c.field-meta.xml
<CustomField>
    <fullName>Perfect_Paragraph_Wording__c</fullName>
    <label>Perfect Paragraph Wording</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>