force-app/main/default/objects/Account/fields/Placements_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Placements_per_Month__c</fullName>
    <label>Placements per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>