force-app/main/default/objects/Account/fields/Policy_Documents_Email__c.field-meta.xml
<CustomField>
    <fullName>Policy_Documents_Email__c</fullName>
    <label>Policy Documents Email</label>
    <type>Email</type>
</CustomField>