force-app/main/default/objects/Account/fields/RAF_Code__c.field-meta.xml
<CustomField>
    <fullName>RAF_Code__c</fullName>
    <label>RAF Code</label>
    <type>TextArea</type>
</CustomField>