force-app/main/default/objects/Account/fields/RAF_URL_Code__c.field-meta.xml
<CustomField>
    <fullName>RAF_URL_Code__c</fullName>
    <label>RAF URL Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>