force-app/main/default/objects/Account/fields/Recruiter_Protect_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Protect_Renewal_Date__c</fullName>
    <label>Recruiter Protect Renewal Date</label>
    <type>Date</type>
</CustomField>