force-app/main/default/objects/Account/fields/Referred__c.field-meta.xml
<CustomField>
    <fullName>Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred</label>
    <type>Checkbox</type>
</CustomField>