force-app/main/default/objects/Account/fields/Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Referred By (Account))</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>