force-app/main/default/objects/Account/fields/Referred_By_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts (Referred By (Lead))</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>