force-app/main/default/objects/Account/fields/Referring__c.field-meta.xml
<CustomField>
    <fullName>Referring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referring</label>
    <type>Checkbox</type>
</CustomField>