force-app/main/default/objects/Account/fields/Renewal_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Commission_Rate__c</fullName>
    <label>Renewal Commission Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>