force-app/main/default/objects/Account/fields/Renewal_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Commission_Value__c</fullName>
    <description>A fixed £ value for any vouchers the partner is entitled on renewal commission</description>
    <label>Renewal Commission Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>