force-app/main/default/objects/Account/fields/Send_Contact_to_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Send_Contact_to_Pardot__c</fullName>
    <label>Send Contact to Pardot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>