force-app/main/default/objects/Account/fields/Send_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Send_Marketing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When UNCHECKED this person should not be send marketing emails, SMS or DM from Kingsbridge (or 3rd parties).</description>
    <label>Send Marketing</label>
    <type>Checkbox</type>
</CustomField>