force-app/main/default/objects/Account/fields/SharePoint_Endorsement_Link__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Endorsement_Link__c</fullName>
    <label>SharePoint Document Link</label>
    <type>Url</type>
</CustomField>