force-app/main/default/objects/Account/fields/Tool_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Tool_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tool Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Tool Decision Maker)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>